fix various css spacing issues

--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -693,7 +693,7 @@ li {
     display: flex;
     justify-content: center;
     width: 100%;
-    margin-bottom: 40px;
+    margin-bottom: 20px;
   }
 
   .projectHeaderText {
